# master-preproc

./: CMakeLists.txt  delafdict.cpp  delafdict.h  main.cpp  spellchecker.cpp  spellchecker.h  tweetscleaner.cpp  tweetscleaner.h  utils.cpp  utils.h
data/: en.dict  es.dict
tests/: CMakeLists.txt  delafdicttests.cpp  spelltests.cpp  testcleantexts.cpp  tweetscleanertests.cpp
tests/fixtures/: delaf.dict  getWordsFromText.txt  removeLaughData.txt  removeLineBreakAndTabulationsData.txt  removeMentions.txt  removeNonAsciiData.txt  removeSmileysData.txt  removeStopWords.txt  removeURLs.txt  testData.txt  tweetsCleanerDelaf.dict  tweetsCleanerDiscardsTweetsWithFewChoosenWordsExpected.txt  tweetsCleanerDiscardsTweetsWithHighUnknownWordsRateExpected.txt  tweetsCleanerGroupsTweetsExpected.txt  tweetsCleanerOutputCanonicalExpected.txt  tweetsCleanerOutputCanonicalIn.txt
